--- a/views/index.mustache
+++ b/views/index.mustache
@@ -12,34 +12,50 @@
 <body>
     <nav>
         <a href="/">All Snippets</a>
-        <a href="/user/profile">My Snippets</a>
-        <a href="/auth/login">Search Snippets</a>
-        <a href="/auth/signup">Create a Snippet</a>
         <a href="/auth/login">Login</a>
         <a href="/auth/signup">Sign Up</a>
         <a href="/auth/logout">Logout</a>
     </nav>
     <h1> This is the index page! Are you excited?!</h1>
+    <div>
+        <form action="/auth/createNew" method="POST">
+            <input type="text" name="title" placeholder="title" autocomplete="off" required><br>
+            <label>Language</label><br>
+            <select type="select" name="language" placeholder="language" autocomplete="off">
+                <option value="CSS">CSS</option>
+                <option value="HTML">HTML</option>
+                <option value="Javascript/JSON">JavaScript/JSON</option>
+                <option value="SQL">SQL</option>
+                <option value="Ruby">Ruby</option>
+            </select><br>
+            <textarea rows="5" cols="50" name="body" placeholder="body" autocomplete="off"></textarea><br>
+            <textarea rows="2" cols="30" name="notes" placeholder="notes" autocomplete="off"></textarea><br>
+            <input type="text" name="tag" placeholder="Tag 1">
+            <input type="text" name="tag" placeholder="Tag 2">
+            <input type="text" name="tag" placeholder="Tag 3">
+
+            <button type="Submit">Create Snippet!</button>
+
+        </form>
+
+    </div>
+
+
 
     {{#codeSnippetOrganizer}}
     <div class="entry-styles">
-        <a href="/vinylcollection/{{_id}}">
-            <h1>{{name}}</h1>
+        <a href="/codeSnippet/{{_id}}">
+            <h1>{{title}}</h1>
         </a>
-        <p>Artist Name: &nbsp; {{name}}</p>
-        <p>Album Name: &nbsp; {{albumName}}</p>
-        <p>Condition: &nbsp;{{condition}}</p>
-        <p>Is it signed? &nbsp; {{#signed}} Yes {{/signed}} {{^signed}} No {{/signed}}</p>
-        <p>Value: &nbsp;{{value}}</p>
-        <p>For sale? &nbsp; {{#forSale}} Yes {{/forSale}} {{^forSale}} No {{/forSale}}</p>
-        <p>Genre: {{#genre}}&nbsp; {{.}}&nbsp;{{/genre}}</p>
-        <p>How many tracks? &nbsp; {{albumDetails.tracks}}</p>
-        <p>Release Year: &nbsp; {{albumDetails.releaseYear}}</p>
-        <p>RPM: &nbsp; {{albumDetails.rpm}}</p>
+        <p>Notes: {{notes}}</p>
+        <p>language: {{language}}</p>
+
+        <p>Tag:{{tag}}</p>
+
+        <p>Body: {{body}}</p>
+
     </div>
     <br> {{/codeSnippetOrganizer}}
-
-
 
 
 
